[package]
name = "pathfinding-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flamegraph = "0.6.4"
ordered-float = "4.2.0"
rand = "0.8.5"
rayon = "1.8.1"
serde_json = "1.0.111"

[profile.release]
debug = true
