[package]
name = "pathfinding-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.8"
rand = { version = "0.8.5", features = ["small_rng"] }
ordered-float = "4.2.0"
rayon = "1.8.1"
serde_json = "1.0.111"

[profile.release]
debug = true
